--- a/pages/KitchenAppliances.html
+++ b/pages/KitchenAppliances.html
@@ -371,6 +371,7 @@
   <script src="../js/admin.js"></script>
   <script src="../js/subPages.js"></script>
   <script src="../js/signOut.js"></script>
+  <script src="../js/kitchenAppliance.js"></script>
 </body>
 
 </html>
