--- a/pages/chicken.html
+++ b/pages/chicken.html
@@ -368,12 +368,14 @@ aria-hidden="true">
     firebase.analytics();
   </script>
 
-  <script src="../js/getData.js"></script>
+  <!-- <script src="../js/getData.js"></script> -->
   <script src="../js/addToCart.js"></script>
   <script src="../js/reload.js"></script>
   <script src="../js/admin.js"></script>
   <script src="../js/subPages.js"></script>
   <script src="../js/signOut.js"></script>
+  <script src="../js/chicken.js"></script>
+
 </body>
 
 </html>
