--- a/pages/profile.html
+++ b/pages/profile.html
@@ -11,11 +11,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="bootstrap/bootstrap-4.4.1-dist/bootstrap-4.4.1-dist/css/bootstrap.min.css">
+        <link rel="shortcut icon" href="../images/websiteLogo.jpg" type="image/x-icon">
         <!--drop Down-links-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
     
 
     <title>Profile page</title>
@@ -28,7 +29,7 @@
         <div class="col-12">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#"> 
-          <img src="#" alt="weblogo" class="weblogo">  </a>
+          <img src="../images/websiteLogo.jpg" alt="weblogo" class="weblogo"> </a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
      </button>
