--- a/index.html
+++ b/index.html
@@ -306,23 +306,23 @@
     <div class="row">
       <div class="col-md-2 owlZoom ">
         <div>
-          <a href=""><img class="owl-item" src="images/meatShop.jpg" alt="">
+          <a href="pages/beef.html"><img class="owl-item" src="images/meatShop.jpg" alt="">
             <h6 class="text-muted p-3 ">Meat Shop</h6>
           </a>
         </div>
       </div>
       <div class="col-md-2 owlZoom">
-        <a href=""><img class="owl-item" src="images/stationarysilder.jpg" alt="">
+        <a href="pages/pencil.html"><img class="owl-item" src="images/stationarysilder.jpg" alt="">
           <h6 class="text-muted p-3 ">Stationary</h6>
         </a>
       </div>
       <div class="col-md-2 owlZoom">
-        <a href=""><img class="owl-item" src="images/webLogo.png" alt="">
+        <a href="pages/Fruits.html"><img class="owl-item" src="images/webLogo.png" alt="">
           <h6 class="text-muted p-3">Fruits&Vegetables</h6>
         </a>
       </div>
       <div class="col-md-2 owlZoom">
-        <a href=""><img class="owl-item" src="images/house.jpg" alt="">
+        <a href="pages/KitchenAppliances.html"><img class="owl-item" src="images/house.jpg" alt="">
           <h6 class="text-muted p-3 ">Household</h6>
         </a>
       </div>
@@ -332,7 +332,7 @@
         </a>
       </div>
       <div class="col-md-2 owlZoom">
-        <a href=""><img class="owl-item" src="images/babyCare/baby13.jpg" alt="">
+        <a href="pages/shampoo.html"><img class="owl-item" src="images/babyCare/baby13.jpg" alt="">
           <h6 class="text-muted p-3 ">BabyCares</h6>
         </a>
       </div>
