--- a/pages/KitchenAppliances.html
+++ b/pages/KitchenAppliances.html
@@ -267,13 +267,13 @@
 
 
 <div class="container">
-<img class="sliderVegi" src="../images/kitchenAppliances.jpg" alt="">
+<img class="sliderVegi" src="../images/dinnerset/set1.jpg" alt="">
 </div>
 
 
 
 <div class="container cardBody"> 
-  <div class="row" id="display">
+  <div class="row" id="kitchen">
    
   </div>
 </div> 
