--- a/pages/beef.html
+++ b/pages/beef.html
@@ -184,7 +184,7 @@
 
 
 <div class="container cardBody"> 
-  <div class="row" id="display">
+  <div class="row" id="beefBody">
    
   </div>
 </div> 
@@ -283,6 +283,10 @@
   <script src="../js/beef.js"></script>
   <script src="../js/subPages.js"></script>
   <script src="../js/signOut.js"></script>
+  <script src="../js/placeOrder.js"></script>
+
+
+ 
 </body>
 
 </html>
