--- a/pages/pamper.html
+++ b/pages/pamper.html
@@ -184,7 +184,7 @@
 
 
 <div class="container cardBody"> 
-  <div class="row" id="display">
+  <div class="row" id="pamper">
    
   </div>
 </div> 
