--- a/pages/pencil.html
+++ b/pages/pencil.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chicken</title>
+  <title>Pencils</title>
   <link rel="stylesheet" href="../bootstrap/bootstrap-4.4.1-dist/bootstrap-4.4.1-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -274,7 +274,7 @@
 
   
 <div class="container cardBody"> 
-  <div class="row" id="display">
+  <div class="row" id="pencil">
    
   </div>
 </div> 
